# SimulationProject

./: .gitignore  LICENSE  README.md  pyproject.toml  test_job.sh
CATERPillar_inputs/: single_axon_run3.csv
batch/: euler_extra.sh  euler_extra_GFO.sh  euler_intra.sh  euler_intra_GFO.sh  euler_intra_GFO_test.sh  noneuler.sh  perp.sh
gradients/: LTE50hz.csv  STEaniso.csv  test.csv  waveform1.csv  waveform3.csv  waveform4.csv
outputs/: test_signals  test_signals_test_config
outputs/single_axon1_folder/: single_axon1_faces  single_axon1_vertices
pixi-py/: pyproject.toml
pixi-py/src/pixi_py/: simulation.py
sim_configs/: config_euler.toml  config_euler_extra.toml  config_euler_extra_GFO.toml  config_euler_intra.toml  config_euler_intra2.toml  config_euler_intra_GFO.toml  config_tester.toml  test_config.toml
src/: graphing.py  graphingCubic.py  randomSpheres.py  simulation.py  simulation_euler.py  simulation_euler_test.py  simulation_perp.py  substrate.py  substrateCATERPillar.py  substrateCylinder.py  substrateSphere.py  substrate_beaded_axon_SA.py  substrate_beaded_axon_V.py  test_DTI.py  viewSub.py
substrate/100_cylindersUP/: 100_cylindersUP_vertices.csv  substrate_faces.csv  substrate_vertices.csv
substrate/150_cylindersUP/: 150_cylindersUP_vertices.csv  substrate_faces.csv  substrate_vertices.csv
substrate/1_cylindersUP/: 1_cylindersUP_vertices.csv
substrate/1_cylinders_SIDE/: 1_cylindersUP_vertices.csv
substrate/200_cylindersUP/: 200_cylindersUP_vertices.csv  substrate_faces.csv  substrate_vertices.csv
(+53 files in other folders)
