[project]
dependencies = ["disimpy>=0.3.0,<0.4"]
name = "pixi-py"
requires-python = ">= 3.9"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
pixi_py = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.dependencies]
python = "3.9.*"
numpy = "*"
scipy = "*"
matplotlib = "*"
pandas = "*"
trimesh = "*"
dipy = "*"
